--- a/task0001/index01.html
+++ b/task0001/index01.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task0001</title>
+    <link rel="stylesheet" type="text/css" href="task0001.css">
 </head>
 <body>
     <h1>My github account: haylin0707;</h1>
