--- a/task0001/index01.html
+++ b/task0001/index01.html
@@ -13,7 +13,12 @@
     </ul>
 
     <h2>Welcome to my Home Page</h2>
-    <p>This is my first home page;HHHAAA~~~</p>
+    <p class="p1">This is my first home page;HHHAAA~~~</p>
+
+    <h3>静夜思-Li Bai</h3>
+    <p class="p2">
+        床前明月光，<br/>疑似地上霜；<br/>举头望明月，<br/>低头思故乡。
+    </p>
     <img src="f1.jpg">
 </body>
 </html>
