--- a/task0001(7)/Myblog/index.html
+++ b/task0001(7)/Myblog/index.html
@@ -2,17 +2,17 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="index.css" type="text/css">
-    <title>My Blog</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <title>首页</title>
 </head>
 <body>
     <header>
         <nav>
             <h1>Stefanie</h1>
             <ul>
-                <li>首页</li>
-                <li>文章</li>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="blog.html" target="_blank">文章</a></li>
                 <li>作品</li>
                 <li>關於</li>
             </ul>
@@ -58,8 +58,8 @@
     <footer class="footer">
         <nav class="footer_nav">
             <ul>
-                <li>首页</li>
-                <li>文章</li>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="blog.html" target="_blank">文章</a></li>
                 <li>作品</li>
                 <li>关于</li>
             </ul>
