--- a/task0001(7)/Myblog/index.html
+++ b/task0001(7)/Myblog/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="blog.html" target="_blank">文章</a></li>
-                <li>作品</li>
+                <li><a href="gallery.html" target="_blank">作品</a></li>
                 <li>關於</li>
             </ul>
             <a href="www.github.com"><img src="img/icon-github.png"></a>
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="blog.html" target="_blank">文章</a></li>
-                <li>作品</li>
+                <li><a href="gallery.html" target="_blank">作品</a></li>
                 <li>关于</li>
             </ul>
         </nav>
