--- a/task0001(7)/Myblog/blog.html
+++ b/task0001(7)/Myblog/blog.html
@@ -11,10 +11,10 @@
         <nav>
             <h1>Stefanie</h1>
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="blog.html" target="_blank">文章</a></li>
+                <li><a href="index.html" target="_blank">首页</a></li>
+                <li><a href="blog.html">文章</a></li>
                 <li><a href="gallery.html" target="_blank">作品</a></li>
-                <li>關於</li>
+                <li><a href="about.html" target="_blank">关于</a></li>
             </ul>
             <a href="www.github.com"><img src="img/icon-github.png"></a>
         </nav>
@@ -175,10 +175,10 @@
     <footer class="footer">
         <nav class="footer_nav">
             <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="blog.html" target="_blank">文章</a></li>
+                <li><a href="index.html" target="_blank">首页</a></li>
+                <li><a href="blog.html">文章</a></li>
                 <li><a href="gallery.html" target="_blank">作品</a></li>
-                <li>关于</li>
+                <li><a href="about.html" target="_blank">关于</a></li>
             </ul>
         </nav>
         <div class="link">
