--- a/task0001(7)/Myblog/index.html
+++ b/task0001(7)/Myblog/index.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">首页</a></li>
                 <li><a href="blog.html" target="_blank">文章</a></li>
                 <li><a href="gallery.html" target="_blank">作品</a></li>
-                <li>關於</li>
+                <li><a href="about.html" target="_blank">关于</a></li>
             </ul>
             <a href="www.github.com"><img src="img/icon-github.png"></a>
         </nav>
@@ -61,7 +61,7 @@
                 <li><a href="index.html">首页</a></li>
                 <li><a href="blog.html" target="_blank">文章</a></li>
                 <li><a href="gallery.html" target="_blank">作品</a></li>
-                <li>关于</li>
+                <li><a href="about.html" target="_blank">关于</a></li>
             </ul>
         </nav>
         <div class="link">
